--- a/guided_concurrentKernels_SYCLMigration/02_sycl_migrated/CMakeLists.txt
+++ b/guided_concurrentKernels_SYCLMigration/02_sycl_migrated/CMakeLists.txt
@@ -9,4 +9,6 @@ include_directories(${CMAKE_SOURCE_DIR}/02_sycl_migrated/Common/)
 add_executable (02_sycl_migrated Samples/0_Introduction/concurrentKernels/concurrentKernels.dp.cpp)
 target_link_libraries(02_sycl_migrated sycl)
 
-add_custom_target (run_sm cd ${CMAKE_SOURCE_DIR}/02_sycl_migrated/ && ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/02_sycl_migrated)
+add_custom_target (run_sm_cpu  cd ${CMAKE_SOURCE_DIR}/02_sycl_migrated/ && ONEAPI_DEVICE_SELECTOR=opencl:cpu ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/02_sycl_migrated)
+add_custom_target (run_sm_gpu  cd ${CMAKE_SOURCE_DIR}/02_sycl_migrated/ && ONEAPI_DEVICE_SELECTOR=level_zero:gpu ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/02_sycl_migrated)
+add_custom_target (run_sm_gpu_opencl  cd ${CMAKE_SOURCE_DIR}/02_sycl_migrated/ && ONEAPI_DEVICE_SELECTOR=opencl:gpu ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/02_sycl_migrated)
