--- a/guided_concurrentKernels_SYCLMigration/02_sycl_migrated/CMakeLists.txt
+++ b/guided_concurrentKernels_SYCLMigration/02_sycl_migrated/CMakeLists.txt
@@ -1,5 +1,7 @@
-if(MAX_GPU)
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl -fsycl-targets=intel_gpu_pvc -D MAX_GPU")
+if(INTEL_MAX_GPU)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl -fsycl-targets=intel_gpu_pvc -D INTEL_MAX_GPU")
+elseif(NVIDIA_GPU)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl -fsycl-targets=nvptx64-nvidia-cuda -D NVIDIA_GPU")
 else()
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsycl ")
 endif()
